== Changelog ==
= 4.05 =
* Updates to the default form styling.
* New: Added an inbox as a centralized place for notices and communication.
* Help prevent common email issues by showing a warning in the email settings when the from and to email addresses are the same.
* Fix: Forms edited after export and reimported were losing the required indicator in some cases.

= 4.04.05 =
* When some styling settings are blank, allow inheritance from theme styling.
* Allow a form action to be updated during form migration.
* Code: Update javascript codestyling.

= 4.04.04 =
* Increased WP version requirement to 4.7.
* Added more options on Import/Export page depending on what other plugins are installed.
* More reliably add new options in fields when also reordering.
* Fix: When a newly added option is set as the default value, save it correctly.
* Added an easy way to install and SMTP plugin for better email deliverability.

= 4.04.03 =
* Add option to Import forms on the form listing page and in the new form process.
* Improve performance on the form settings page when default values are used in fields.
* Update the base migrator class for more flexibility.
* Fix: Prevent a few PHP warnings.

= 4.04.02 =
* Don't load the front end form js in the builder/settings.
* Fix: Some database prefixes weren't working correctly with many database calls: "rm", "fr", "_".
* Fix: Remove incorrect instructions for input masks and allow uppercase characters with 'a' in the input mask.
* Fix: Save value as array when single box is checked. This resolves a conflict when used with ACF.
* Fix: The 5/6th class was the wrong size when CSS grids are turned off.
* Fix: More accurately set the default options to fade in fields and use CSS grids.
* Fix: Sort country list by the current locale.

= 4.04.01 =
* Performance: Improve speed when creating a unique entry key.
* Performance: Always return a single result with FrmDb::get_var().