@@ -447,6 +447,7 @@ Our Stripe integration helps you quickly accept credit card payments online. Our
 = 4.05 =
 * Updates to the default form styling.
 * New: Added an inbox as a centralized place for notices and communication.
+* New: Added frm_color_block and frm_total_big classes for more beautiful forms.
 * Help prevent common email issues by showing a warning in the email settings when the from and to email addresses are the same.
 * Fix: Forms edited after export and reimported were losing the required indicator in some cases.
 
